corrected spacing

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -76,7 +76,7 @@
     }
 
     .footerContainer {
-        max-width: 87%;
+        max-width: 1110px;
         margin: 0 auto;
         gap: 4em;
     }
